test/data/valid-messages/unknown-header-field.message
## message with a 'name' header field and unknown 'unkn' field

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER method_call
FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.Foo'
FIELD_NAME mebr
TYPE STRING
STRING 'Bar'
FIELD_NAME unkn
TYPE INT32
INT32 0xfeeb
ALIGN 8
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
