test/data/invalid-messages/too-much-header-padding-by-far.message
## has one byte extra header padding

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER
FIELD_NAME unkn
TYPE STRING
STRING 'a'
ALIGN 8
BYTE 0
ALIGN 8
BYTE 0
ALIGN 8
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
